--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "ramda": "^0.27.1"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "tsdx lint"
     }
   },
   "prettier": {
-    "printWidth": 80,
+    "printWidth": 120,
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
@@ -33,9 +35,16 @@
   "author": "AndreaPontrandolfo",
   "module": "dist/ramda-addons.esm.js",
   "devDependencies": {
+    "@types/lodash": "^4.14.161",
+    "@types/ramda": "types/npm-ramda#dist",
     "husky": "^4.3.0",
+    "ramda": "^0.27.1",
     "tsdx": "^0.13.3",
     "tslib": "^2.0.1",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.20",
+    "lodash-es": "^4.17.15"
   }
 }
