added release script

--- a/package.json
+++ b/package.json
@@ -15,15 +15,11 @@
     "build": "tsdx build",
     "test": "tsdx test",
     "lint": "tsdx lint",
-    "prepare": "tsdx build"
+    "prepare": "tsdx build",
+    "release": "np --no-2fa"
   },
   "peerDependencies": {
     "ramda": "^0.27.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
   },
   "prettier": {
     "printWidth": 120,
